--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,9 @@
+/* google font Inter */
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap");
+
+/* google font Montserrat */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -14,47 +20,25 @@
   z-index: 1;
   overflow: hidden;
 }
-nav {
-  display: flex;
-  align-items: center;
-  padding: 30px 0;
-}
-.ncb {
-  font-size: 3em;
-}
-.logo {
-  width: 150px;
-}
-nav ul {
-  flex: 1;
-  text-align: right;
-}
+
 nav ul li {
   display: inline-block;
   list-style: none;
   margin: 0 15px;
 }
-a {
-  text-decoration: none;
-  color: #fff;
-}
+
 .btn {
   border: 2px solid #fff;
   padding: 6px 25px;
   border-radius: 30px;
   margin-left: 30px;
 }
+
 nav .btn:hover {
   background: #fff;
   color: #4d19db;
   font-weight: 500;
   transition: 0.1s;
-}
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: 10%;
-  justify-content: space-between;
 }
 
 .col-1 {
@@ -71,28 +55,7 @@ nav .btn:hover {
 .col-1 img {
   width: 100%;
 }
-.col-2 h1 {
-  font-size: 62px;
-  font-weight: 600;
-}
-span {
-  color: yellow;
-}
-.col-2 p {
-  margin: 10px 0 50px;
-  max-width: 580px;
-}
-.col-2 .btn {
-  margin-left: 0;
-  margin-right: 30px;
-  background: #fff;
-  color: #4d19db;
-  font-weight: 500;
-}
-.col-2 .btn:hover {
-  background: rgb(230, 234, 236);
-  transition: 0.2s;
-}
+
 .elements {
   position: absolute;
   left: 0;
