--- a/app/globals.css
+++ b/app/globals.css
@@ -12,14 +12,25 @@
   width: 100%;
   min-height: 70vh;
   background: linear-gradient(45deg, #a700ff, #4d19db);
-  padding-left: 8%;
-  padding-right: 8%;
+  padding-left: 10%;
+  padding-right: 10%;
   box-sizing: border-box;
   color: #fff;
   position: relative;
   z-index: 1;
   overflow: hidden;
 }
+
+/* .hero2 {
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(45deg, #9f04fb, #7912ec);
+  box-sizing: border-box;
+  color: #fff;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+} */
 
 .triangle1 {
   position: absolute;
@@ -39,6 +50,24 @@
   z-index: -1;
   opacity: 0.7;
 }
+
+.triangle3 {
+  position: absolute;
+  bottom: 20;
+  right: -200px;
+  width: 400px;
+  z-index: -1;
+  opacity: 0.5;
+  transform: translateY(-10%);
+}
+/* .circle1 {
+  position: absolute;
+  right: -350px;
+  width: 450px;
+  z-index: -1;
+  opacity: 0.5;
+} */
+
 .circle {
   position: absolute;
   right: -180px;
