--- a/app/globals.css
+++ b/app/globals.css
@@ -39,16 +39,26 @@
   transform: translate(-50%);
   width: 400px;
   z-index: -1;
-  opacity: 0.7;
+  opacity: 0.6;
 }
-.triangle2 {
+/* .triangle2 {
   position: absolute;
-  left: -50px;
-  top: 50%;
+  left: -200px;
+  bottom: 20;
   transform: translateY(-50%);
   width: 400px;
   z-index: -1;
   opacity: 0.7;
+} */
+
+.triangle2 {
+  position: absolute;
+  bottom: 20;
+  left: -100px;
+  width: 400px;
+  z-index: -1;
+  opacity: 0.5;
+  transform: translateX(-10%);
 }
 
 .triangle3 {
@@ -68,11 +78,11 @@
   opacity: 0.5;
 } */
 
-.circle {
+/* .circle {
   position: absolute;
   right: -180px;
   bottom: -300px;
   width: 500px;
   z-index: -1;
   opacity: 0.5;
-}
+} */
